--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "18.2.0",
     "react-native": "0.74.0-nightly-20240102-05ec058ac",
     "react-native-gesture-handler": "^2.14.0",
+    "react-native-maps": "^1.9.1",
     "react-native-safe-area-context": "^4.8.2",
     "react-native-screens": "^3.29.0"
   },
