feat: implement google maps restrictions

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -23,6 +23,6 @@
       </activity>
        <meta-data
      android:name="com.google.android.geo.API_KEY"
-     android:value="Your Google maps API Key Here"/>
+     android:value="AIzaSyDmelqmGRUPbJxy-4HQEAk5tM0p7XcAXHM"/>
     </application>
 </manifest>
