--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "react": "18.2.0",
     "react-native": "0.74.0-nightly-20240102-05ec058ac",
     "react-native-gesture-handler": "^2.14.0",
+    "react-native-image-base64": "^0.1.4",
     "react-native-maps": "^1.9.1",
     "react-native-safe-area-context": "^4.8.2",
-    "react-native-screens": "^3.29.0"
+    "react-native-screens": "^3.29.0",
+    "react-native-share": "^10.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
